name:                rocksdb-haskell-ng
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  extra-libraries:     rocksdb
  exposed-modules:     Database.RocksDB
  build-depends:       base >= 4.7 && < 5

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rocksdb-haskell-ng
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
