name:                rocksdb-haskell-ng
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3
license-file:        LICENSE

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  extra-libraries:     rocksdb
  exposed-modules:     Database.RocksDB
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rocksdb-haskell-ng
                     , hspec
                     , QuickCheck
                     , temporary
                     , directory
                     , filepath
                     , deepseq
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark speed
  hs-source-dirs:      bench
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rocksdb-haskell-ng
                     , criterion
                     , hspec
                     , QuickCheck
                     , temporary
                     , directory
                     , filepath
                     , deepseq
  default-language:    Haskell2010
